--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,14 @@ span {
     margin: 0px;
     padding: 0px;
 }
+.desktopHide{
+    display: none;
+}
+ul {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+}
 
 a,
 a:hover {
@@ -156,39 +164,526 @@ body {
     color: black !important;
 }
 
+/********** Dashboard - Layout ***************/
+.mainContent .dashboardLayout {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.mainContent .dashboardLayout .sideBar {
+    width: 20%;
+    border-right: 1px solid #F4F7FE;
+    position: fixed;
+    height: 97%;
+    top: 0px;
+    left: 0px;
+}
+.mainContent .dashboardLayout .sideBar ul li .tooltip{
+    position:absolute;
+    left:135px;
+    top:0;
+    transform:translate(-50%, -50%);
+    border-radius: 6px;
+    height:35px;
+    width:120px;
+    background: #489aff;
+    line-height: 35px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition:0s;
+    opacity:0;
+    pointer-events: none;
+    display:block;
+    color: #fff;
+  }
+
+  .mainContent .dashboardLayout .sideBar ul li .tooltip::before{
+    content:'';
+    width:0;
+    height:0;
+    border-top:10px solid transparent;
+    border-bottom:10px solid transparent;
+    border-right:10px solid #489aff;
+    position:absolute;
+    left:-8px;
+    top:7px;
+  }
+  .mainContent .dashboardLayout .sideBar ul li,
+  .mainContent .dashboardLayout .sideBar .logoutText{
+      position: relative;
+  }
+  .mainContent .dashboardLayout .sideBar.active ul li .tooltip,
+  .mainContent .dashboardLayout .sideBar .logoutText .tooltip{
+    display:none;
+  }
+  .mainContent .dashboardLayout .sideBar ul li:hover .tooltip,
+  .mainContent .dashboardLayout .sideBar .logoutText:hover .tooltip{
+    transition:all 0.5s ease;
+    opacity:1;
+    top:50%;
+  }
+.mainContent .dashboardLayout .sideBar .logo {
+    padding: 30px;
+    border-bottom: 1px solid #F4F7FE;
+}
+
+.mainContent .dashboardLayout .sideBar .logo img {
+    width: 170px;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv {
+    margin-top: 30px;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul {
+    padding: 0px 30px;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li {
+    padding: 10px;
+    margin-bottom: 25px;
+    cursor: pointer;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li img,
+.mainContent .dashboardLayout .sideBar .logoutText a img {
+    margin-right: 14px;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li a {
+    color: #A3AED0;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li.active,
+.mainContent .dashboardLayout .sideBar .menuDiv ul li:hover {
+    background: #489BFF;
+    border-radius: 5px;
+}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li.active a,
+.mainContent .dashboardLayout .sideBar .menuDiv ul li:hover a {
+    color: #fff;
+}
+
+.mainContent .dashboardLayout .sideBar .logoutText {
+    position: absolute;
+    bottom: 10px;
+    left: 40px;
+}
+
+.mainContent .dashboardLayout .sideBar .logoutText a {
+    color: #A3AED0;
+}
+
+.mainContent .dashboardLayout .contentDiv {
+    width: 80%;
+    margin-left: 20%;
+}
+
+.mainContent .dashboardLayout .contentDiv header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 37px 30px;
+    border-bottom: 1px solid #F4F7FE;
+    position: fixed;
+    width: 80%;
+}
+
+.mainContent .dashboardLayout .contentDiv header h3 {
+    font-size: 34px;
+    font-weight: 700;
+}
+
+.mainContent .dashboardLayout .contentDiv header .userOptions ul {
+    display: flex;
+}
+
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li {
+    padding: 0px 10px;
+}
+
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li a {
+    font-weight: 700;
+    color: #000000;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv {
+    padding: 30px;
+    margin-top: 10%;
+    position: relative;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv .dataTables_length,
+.mainContent .dashboardLayout .contentDiv .tableDiv .dataTables_info {
+    display: none;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv table.dataTable.no-footer,
+.mainContent .dashboardLayout .contentDiv .tableDiv table.dataTable thead th,
+.mainContent .dashboardLayout .contentDiv .tableDiv table.dataTable thead td {
+    border: none !important;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv table thead {
+    background: #489BFF;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv table thead th {
+    color: #fff;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv #table_id_filter {
+    margin-bottom: 20px;
+    position: relative;
+    right: 180px
+}
+
+table.dataTable.stripe tbody tr.odd,
+table.dataTable.display tbody tr.odd,
+table.dataTable.display tbody tr.odd>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.odd>.sorting_1,
+table.dataTable.display tbody tr.even>.sorting_1,
+table.dataTable.order-column.stripe tbody tr.even>.sorting_1,
+table.dataTable.hover tbody tr:hover,
+table.dataTable.display tbody tr:hover {
+    background-color: transparent !important;
+}
+
+table.dataTable tbody th,
+table.dataTable tbody td {
+    padding: 14px 10px !important;
+}
+
+table.dataTable.display tbody tr.even {
+    background-color: rgba(248, 248, 248, 0.4) !important;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv .commonBadge {
+    border-radius: 24px;
+    padding: 4px;
+    width: 84px;
+    text-align: center;
+    font-size: 12px;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv .failed {
+    background: #F2CDCD;
+}
+
+.mainContent .dashboardLayout .contentDiv .tableDiv .paid {
+    background: #D1F7EB;
+}
+
+table.dataTable tbody td {
+    font-size: 14px;
+    font-weight: 400;
+    color: #686868;
+}
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
+.dataTables_paginate span .paginate_button,
+.dataTables_paginate span .paginate_button:hover {
+
+    background: #FFFFFF !important;
+    border: 1px solid #DFE3E8 !important;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 0px !important;
+    font-size: 12px;
+    margin: 0px 3px;
+}
+
+.previous {
+    min-width: 18px !important;
+    background: #919EAB !important;
+    border-radius: 4px !important;
+    padding: 0px !important;
+    height: 20px !important;
+}
+
+.next {
+    min-width: 18px !important;
+    background: #fff !important;
+    border-radius: 4px !important;
+    padding: 0px !important;
+    height: 20px !important;
+    color: #fff !important;
+    border: 1px solid #DFE3E8 !important;
+}
+
+.previous i {
+    color: #fff;
+}
+
+.next:hover i {
+    color: #151522 !important;
+}
+
+.dataTables_wrapper .dataTables_filter input::placeholder {
+    font-size: 16px;
+    font-weight: 400;
+    color: #8F9BBA;
+}
+
+.dataTables_wrapper .dataTables_filter input {
+    padding: 5px 35px !important;
+    background: #FFFFFF !important;
+    border-radius: 10px !important;
+    /* box-shadow: 0px 0px 10px 4px rgb(0 0 0 / 14%);
+    -webkit-box-shadow: 0px 0px 16px 4px rgb(0 0 0 / 5%);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.14); */
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15));
+    border: none !important;
+    font-size: 16px;
+    font-weight: 400;
+    color: #8F9BBA;
+    width: 340px;
+    height: 46px;
+}
+
+.dataTables_wrapper .dataTables_filter label i {
+    color: #8F9BBA;
+    position: relative;
+    left: 25px;
+    z-index: 9999;
+
+}
+
+table.dataTable.row-border tbody th,
+table.dataTable.row-border tbody td,
+table.dataTable.display tbody th,
+table.dataTable.display tbody td {
+    border: none !important;
+}
+
+.table-responsive {
+    display: table;
+}
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li a{
+    position: relative;
+}
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li a .count{
+    position: absolute;
+    width: 9px;
+    height: 9px;
+    /* background: #000; */
+    border-radius: 100%;
+    background: #489BFF;
+    right: 0px;
+    top: 3px;
+}
+.datePicker{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    right: 30px;
+    top: 40px;
+}
+.datePicker .textSpan{
+    margin: 0px 10px;
+    display: flex;
+    align-items: center;
+}
+.datePicker .textSpan{
+    font-size: 16px;
+    font-weight: 400;
+}
+.datePicker span{
+    color: #8F9BBA;
+    position: relative;
+    margin-right: 5px;
+}
+.datePicker span input{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    opacity: 0;
+    z-index: 9999;
+}
+#table_id_wrapper{
+    position: relative;
+}
+
+table{
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+}
+thead tr th:first-child{
+    border-radius: 6px 0px 0px 0px;
+}
+thead tr th:last-child{
+    border-radius: 0px 6px 0px 0px;
+}
+.dataTables_paginate{
+    margin-top: 30px;
+}
 @media screen and (max-width: 1200px) {
     .mainContent .loginDiv .formDiv {
         padding: 150px 70px;
     }
 }
+
 @media screen and (max-width: 992px) {
+    .mainContent .dashboardLayout .sideBar .logo {
+        padding: 10px;
+    }
+    .mainContent .dashboardLayout .sideBar .logo img{
+        width: 120px;
+    }
+    .mainContent .dashboardLayout .sideBar .logoutText {
+        left: 20px;
+    }
+
+    .mainContent .dashboardLayout .contentDiv header {
+        padding: 15px 30px;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li img{
+        width: 18px;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li a{
+        font-size: 12px;
+    }
+    .mainContent .dashboardLayout .contentDiv header h3 {
+        font-size: 24px;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul {
+        padding: 0px 10px;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li {
+        margin-bottom: 10px;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li img,
+    .mainContent .dashboardLayout .sideBar .logoutText a img {
+        margin-right: 5px;
+    }
+
     .mainContent .loginDiv .formDiv {
         padding: 150px 30px;
     }
 }
+
 @media screen and (max-width: 768px) {
-    .mainContent .loginDiv{
-        display: block;
+    .dataTables_wrapper .dataTables_filter input{
+        width: auto;
     }
-    .mainContent .logoDiv{
+    .mainContent .dashboardLayout .contentDiv header{
+        width: 90%;
+    }
+    .mainContent .dashboardLayout .contentDiv header {
+        padding: 12px 30px;
+    }    
+    .mainContent .dashboardLayout .contentDiv{
+        width: 100%;
+        margin-left: 10%;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li.active{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv{
+        margin-top: 10px;
+    }
+    .mainContent .dashboardLayout .sideBar .logo img {
+        min-width: 30px;
+        max-width: 30px;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li,
+    .mainContent .dashboardLayout .sideBar .logo{
+        text-align: center;
+    }
+    .mainContent .dashboardLayout .sideBar ul li:hover{
+        background-color: transparent !important;
+    }
+    .mobileHide{
         display: none;
     }
-    .mainContent .loginDiv .formDiv{
+    .desktopHide{
+        display: block;
+    }
+    .mainContent .dashboardLayout .sideBar{
+        width: 10%;
+    }
+    .mainContent .loginDiv {
+        display: block;
+    }
+
+    .mainContent .logoDiv {
+        display: none;
+    }
+
+    .mainContent .loginDiv .formDiv {
         width: 100%;
     }
-    .mainContent .loginDiv .formDiv .formContent p{
+
+    .mainContent .loginDiv .formDiv .formContent p {
         font-size: 12px;
     }
-    .mainContent .loginDiv .formDiv .formContent form .forgotRemberDiv label{
+
+    .mainContent .loginDiv .formDiv .formContent form .forgotRemberDiv label {
         font-size: 14px;
+    }
+    .table-responsive {
+        display: block;
+    }
+}
+@media screen and (max-width: 640px) {
+    .mainContent .dashboardLayout .contentDiv .tableDiv #table_id_filter{
+        right: 20px;
     }
 }
 @media screen and (max-width: 568px) {
+    .datePicker{
+        position: relative;
+        right: initial;
+        top: initial;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li{
+        padding: 0px;
+    }
     .mainContent .loginDiv .formDiv {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
+    }
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li {
+        margin-bottom: 30px;
+    }
+    .mainContent .dashboardLayout .sideBar .logoutText {
+        left: 10px;
+    }
+    .dataTables_wrapper .dataTables_filter input{
+        width: auto;
+    }
+    .mainContent .dashboardLayout .contentDiv header .userOptions ul li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .mainContent .dashboardLayout .sideBar .logo {
+        padding: 10px 0px;
+    }
+    .mainContent .dashboardLayout .contentDiv header h3 {
+        font-size: 18px;
+    }
+    .mainContent .dashboardLayout .contentDiv header {
+        padding: 14px 15px;
+    }
+    .mainContent .dashboardLayout .contentDiv header .userOptions ul li a {
+        font-size: 12px;
     }
 }
