--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,11 @@ span {
     margin: 0px;
     padding: 0px;
 }
-.desktopHide{
+
+.desktopHide {
     display: none;
 }
+
 ul {
     list-style: none;
     padding: 0px;
@@ -175,55 +177,59 @@ body {
 .mainContent .dashboardLayout .sideBar {
     width: 20%;
     border-right: 1px solid #F4F7FE;
-    position: fixed;
     height: 97%;
     top: 0px;
     left: 0px;
 }
-.mainContent .dashboardLayout .sideBar ul li .tooltip{
-    position:absolute;
-    left:135px;
-    top:0;
-    transform:translate(-50%, -50%);
+
+.mainContent .dashboardLayout .sideBar ul li .tooltip {
+    position: absolute;
+    left: 135px;
+    top: 0;
+    transform: translate(-50%, -50%);
     border-radius: 6px;
-    height:35px;
-    width:120px;
+    height: 35px;
+    width: 120px;
     background: #489aff;
     line-height: 35px;
     text-align: center;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    transition:0s;
-    opacity:0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transition: 0s;
+    opacity: 0;
     pointer-events: none;
-    display:block;
+    display: block;
     color: #fff;
-  }
+}
 
-  .mainContent .dashboardLayout .sideBar ul li .tooltip::before{
-    content:'';
-    width:0;
-    height:0;
-    border-top:10px solid transparent;
-    border-bottom:10px solid transparent;
-    border-right:10px solid #489aff;
-    position:absolute;
-    left:-8px;
-    top:7px;
-  }
-  .mainContent .dashboardLayout .sideBar ul li,
-  .mainContent .dashboardLayout .sideBar .logoutText{
-      position: relative;
-  }
-  .mainContent .dashboardLayout .sideBar.active ul li .tooltip,
-  .mainContent .dashboardLayout .sideBar .logoutText .tooltip{
-    display:none;
-  }
-  .mainContent .dashboardLayout .sideBar ul li:hover .tooltip,
-  .mainContent .dashboardLayout .sideBar .logoutText:hover .tooltip{
-    transition:all 0.5s ease;
-    opacity:1;
-    top:50%;
-  }
+.mainContent .dashboardLayout .sideBar ul li .tooltip::before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 10px solid #489aff;
+    position: absolute;
+    left: -8px;
+    top: 7px;
+}
+
+.mainContent .dashboardLayout .sideBar ul li,
+.mainContent .dashboardLayout .sideBar .logoutText {
+    position: relative;
+}
+
+.mainContent .dashboardLayout .sideBar.active ul li .tooltip,
+.mainContent .dashboardLayout .sideBar .logoutText .tooltip {
+    display: none;
+}
+
+.mainContent .dashboardLayout .sideBar ul li:hover .tooltip,
+.mainContent .dashboardLayout .sideBar .logoutText:hover .tooltip {
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
+
 .mainContent .dashboardLayout .sideBar .logo {
     padding: 30px;
     border-bottom: 1px solid #F4F7FE;
@@ -276,12 +282,9 @@ body {
 .mainContent .dashboardLayout .sideBar .logoutText a {
     color: #A3AED0;
 }
-
-.mainContent .dashboardLayout .contentDiv {
+.mainContent .dashboardLayout .contentDiv{
     width: 80%;
-    margin-left: 20%;
 }
-
 .mainContent .dashboardLayout .contentDiv header {
     display: flex;
     justify-content: space-between;
@@ -290,6 +293,25 @@ body {
     border-bottom: 1px solid #F4F7FE;
     position: fixed;
     width: 80%;
+}
+.mainContent .dashboardLayout .contentDiv header .menuBtn{
+    position: absolute;
+    left: 15px;
+    border: 1px solid #489aff;
+    padding: 5px 10px;
+    font-size: 18px;
+    border-radius: 4px;
+    color: #000;
+    display: none;
+}
+.mainContent .dashboardLayout .sideBar .closeMenu{
+    position: absolute;
+    right: 10px;
+    top: 18px;
+    font-size: 18px;
+    color: #489aff;
+    opacity: 0;
+    transition: all .5s;
 }
 
 .mainContent .dashboardLayout .contentDiv header h3 {
@@ -397,10 +419,12 @@ table.dataTable tbody td {
     font-size: 12px;
     margin: 0px 3px;
 }
-
+span .paginate_button{
+    color: #4287F9 !important;
+}
 .previous {
     min-width: 18px !important;
-    background: #919EAB !important;
+    background: #4287F9 !important;
     border-radius: 4px !important;
     padding: 0px !important;
     height: 20px !important;
@@ -450,7 +474,7 @@ table.dataTable tbody td {
     color: #8F9BBA;
     position: relative;
     left: 25px;
-    z-index: 9999;
+    z-index: 99;
 
 }
 
@@ -464,10 +488,12 @@ table.dataTable.display tbody td {
 .table-responsive {
     display: table;
 }
-.mainContent .dashboardLayout .contentDiv header .userOptions ul li a{
+
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li a {
     position: relative;
 }
-.mainContent .dashboardLayout .contentDiv header .userOptions ul li a .count{
+
+.mainContent .dashboardLayout .contentDiv header .userOptions ul li a .count {
     position: absolute;
     width: 9px;
     height: 9px;
@@ -477,7 +503,8 @@ table.dataTable.display tbody td {
     right: 0px;
     top: 3px;
 }
-.datePicker{
+
+.datePicker {
     display: flex;
     position: absolute;
     justify-content: center;
@@ -486,21 +513,25 @@ table.dataTable.display tbody td {
     right: 30px;
     top: 40px;
 }
-.datePicker .textSpan{
+
+.datePicker .textSpan {
     margin: 0px 10px;
     display: flex;
     align-items: center;
 }
-.datePicker .textSpan{
+
+.datePicker .textSpan {
     font-size: 16px;
     font-weight: 400;
 }
-.datePicker span{
+
+.datePicker span {
     color: #8F9BBA;
     position: relative;
     margin-right: 5px;
 }
-.datePicker span input{
+
+.datePicker span input {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -508,36 +539,83 @@ table.dataTable.display tbody td {
     opacity: 0;
     z-index: 9999;
 }
-#table_id_wrapper{
+
+#table_id_wrapper {
     position: relative;
 }
 
-table{
+table {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
 }
-thead tr th:first-child{
+
+thead tr th:first-child {
     border-radius: 6px 0px 0px 0px;
 }
-thead tr th:last-child{
+
+thead tr th:last-child {
     border-radius: 0px 6px 0px 0px;
 }
-.dataTables_paginate{
+
+.dataTables_paginate {
     margin-top: 30px;
 }
+
+input[type="date"]{
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
+#datepicker > span:hover{cursor: pointer;}
+.datepicker-dropdown{
+    width: 20%;
+    float: right;
+    left: initial !important;
+    right: 60px;
+}
+.datepicker-dropdown table{
+    box-shadow: none !important;
+}
+.datepicker-dropdown .next{
+    color: #000 !important;
+    background-color: transparent !important;
+    border: none !important;
+}
+.datepicker-dropdown tr td,
+.datepicker-dropdown tr th {
+    padding: 9px;
+}
+.datepicker table tr td.today, .datepicker table tr td.today:hover, .datepicker table tr td.today.disabled, .datepicker table tr td.today.disabled:hover{
+    background-color: #489aff !important;
+    background-image: none !important;
+    color: #fff !important;
+}
+.datepicker table tr td.day:hover, .datepicker table tr td.day.focused {
+    background: #489aff5e !important;
+    cursor: pointer;
+    color: #fff;
+}
 @media screen and (max-width: 1200px) {
+    .datepicker-dropdown{
+        width: 28%;
+    }
     .mainContent .loginDiv .formDiv {
         padding: 150px 70px;
     }
 }
 
 @media screen and (max-width: 992px) {
+    .datepicker-dropdown {
+        width: 35%;
+    }
     .mainContent .dashboardLayout .sideBar .logo {
         padding: 10px;
     }
-    .mainContent .dashboardLayout .sideBar .logo img{
+
+    .mainContent .dashboardLayout .sideBar .logo img {
         width: 120px;
     }
+
     .mainContent .dashboardLayout .sideBar .logoutText {
         left: 20px;
     }
@@ -545,12 +623,16 @@ thead tr th:last-child{
     .mainContent .dashboardLayout .contentDiv header {
         padding: 15px 30px;
     }
-    .mainContent .dashboardLayout .sideBar .menuDiv ul li img{
+
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li img {
         width: 18px;
     }
-    .mainContent .dashboardLayout .sideBar .menuDiv ul li a{
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li a {
         font-size: 12px;
     }
+
     .mainContent .dashboardLayout .contentDiv header h3 {
         font-size: 24px;
     }
@@ -574,47 +656,72 @@ thead tr th:last-child{
 }
 
 @media screen and (max-width: 768px) {
-    .dataTables_wrapper .dataTables_filter input{
-        width: auto;
+    .datepicker-dropdown {
+        width: 40%;
     }
-    .mainContent .dashboardLayout .contentDiv header{
-        width: 90%;
+    .mainContent .dashboardLayout .sideBar .closeMenu{
+        opacity: 1;
     }
-    .mainContent .dashboardLayout .contentDiv header {
-        padding: 12px 30px;
-    }    
-    .mainContent .dashboardLayout .contentDiv{
-        width: 100%;
-        margin-left: 10%;
-    }
-    .mainContent .dashboardLayout .sideBar .menuDiv ul li.active{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .mainContent .dashboardLayout .sideBar .menuDiv{
-        margin-top: 10px;
-    }
-    .mainContent .dashboardLayout .sideBar .logo img {
-        min-width: 30px;
-        max-width: 30px;
-    }
-    .mainContent .dashboardLayout .sideBar .menuDiv ul li,
-    .mainContent .dashboardLayout .sideBar .logo{
-        text-align: center;
-    }
-    .mainContent .dashboardLayout .sideBar ul li:hover{
-        background-color: transparent !important;
-    }
-    .mobileHide{
-        display: none;
-    }
-    .desktopHide{
+    .mainContent .dashboardLayout .contentDiv header .menuBtn{
         display: block;
     }
-    .mainContent .dashboardLayout .sideBar{
-        width: 10%;
+    .mainContent .dashboardLayout .contentDiv header h3{
+        margin-left: 60px;
     }
+    .dataTables_wrapper .dataTables_filter input {
+        width: auto;
+    }
+
+    .mainContent .dashboardLayout .contentDiv header {
+        width: 90%;
+    }
+
+    .mainContent .dashboardLayout .contentDiv header {
+        padding: 15px 30px;
+    }
+
+    .mainContent .dashboardLayout .contentDiv {
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li.active {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv {
+        margin-top: 10px;
+    }
+
+    .mainContent .dashboardLayout .sideBar .menuDiv ul li,
+    .mainContent .dashboardLayout .sideBar .logo {
+        padding-left: 30px;
+    }
+
+    .mainContent .dashboardLayout .sideBar ul li:hover {
+        background-color: transparent !important;
+    }
+
+    .mobileHide {
+        display: none;
+    }
+
+    .desktopHide {
+        display: block;
+    }
+
+    .mainContent .dashboardLayout .sideBar {
+        z-index: 9999999999;
+        width: 40%;
+        position: absolute;
+        left: 0px;
+        background: #fff;
+        height: 100%;
+        top: 0px;
+    }
+
     .mainContent .loginDiv {
         display: block;
     }
@@ -634,24 +741,50 @@ thead tr th:last-child{
     .mainContent .loginDiv .formDiv .formContent form .forgotRemberDiv label {
         font-size: 14px;
     }
+
+    .table-responsive {
+        display: table;
+    }
+    .mainContent .dashboardLayout .sideBar{
+        left: -350px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .datepicker-dropdown {
+        width: 48%;
+    }
+    .mainContent .dashboardLayout .sideBar .logoutText{
+        bottom: 30px;
+    }
     .table-responsive {
         display: block;
     }
-}
-@media screen and (max-width: 640px) {
-    .mainContent .dashboardLayout .contentDiv .tableDiv #table_id_filter{
+    .mainContent .dashboardLayout .contentDiv .tableDiv #table_id_filter {
         right: 20px;
     }
 }
+
 @media screen and (max-width: 568px) {
-    .datePicker{
+    .datepicker-dropdown{
+        position: absolute !important;
+        right: 15px !important;
+    }
+    .datepicker-dropdown {
+        width: 85%;
+    }
+    .mainContent .dashboardLayout .sideBar{
+        width: 60%;
+    }
+    .mainContent .dashboardLayout .contentDiv header{
+        width: 100%;
+    }
+    .datePicker {
         position: relative;
         right: initial;
         top: initial;
     }
-    .mainContent .dashboardLayout .sideBar .menuDiv ul li{
-        padding: 0px;
-    }
+
     .mainContent .loginDiv .formDiv {
         width: 100%;
         display: flex;
@@ -659,30 +792,41 @@ thead tr th:last-child{
         align-items: center;
         height: 100vh;
     }
+
     .mainContent .dashboardLayout .sideBar .menuDiv ul li {
         margin-bottom: 30px;
     }
+
     .mainContent .dashboardLayout .sideBar .logoutText {
-        left: 10px;
+        left: 40px;
+        font-size: 12px;
     }
-    .dataTables_wrapper .dataTables_filter input{
+
+    .mainContent .dashboardLayout .sideBar .logoutText a img{
+        width: 18px;
+    }
+    .dataTables_wrapper .dataTables_filter input {
         width: auto;
     }
+
     .mainContent .dashboardLayout .contentDiv header .userOptions ul li {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    
+
     .mainContent .dashboardLayout .sideBar .logo {
-        padding: 10px 0px;
+        padding: 10px 0px 10px 35px;
     }
+
     .mainContent .dashboardLayout .contentDiv header h3 {
         font-size: 18px;
     }
+
     .mainContent .dashboardLayout .contentDiv header {
-        padding: 14px 15px;
+        padding: 19px 15px;
     }
+
     .mainContent .dashboardLayout .contentDiv header .userOptions ul li a {
         font-size: 12px;
     }
