--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ body {
 
 .mainContent .dashboardLayout .contentDiv header .userOptions ul li a {
     font-weight: 700;
-    color: #000000;
+    color: #A3AED0;
 }
 .mainContent .dashboardLayout .contentDiv header .userOptions ul li .dropDownMenu a{
     font-weight: 400;
