--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,6 @@ body {
 }
 
 .mainContent .dashboardLayout .sideBar .menuDiv ul li {
-    padding: 10px;
     margin-bottom: 25px;
     cursor: pointer;
 }
@@ -261,6 +260,8 @@ body {
 
 .mainContent .dashboardLayout .sideBar .menuDiv ul li a {
     color: #A3AED0;
+    padding: 10px 20px;
+    display: block;
 }
 .mainContent .dashboardLayout .sideBar .menuDiv ul li a i{
     margin-right: 10px;
@@ -931,6 +932,22 @@ span a[aria-controls="table_id"]{
     margin-bottom: 5px;
 }
 
-.mainContent .dashboardLayout .sideBar .menuDiv ul li ul.submenu{padding:0px;margin-top:10px;}
+.mainContent .dashboardLayout .sideBar .menuDiv ul li ul.submenu{padding:0px;margin-top:0px;background-color: #fff;}
 .mainContent .dashboardLayout .sideBar .menuDiv ul li ul.submenu li{padding:0px;}
 .mainContent .dashboardLayout .contentDiv header .userOptions ul li.openDropDownMenu .username{color:#000;}
+
+.mainContent .dashboardLayout .sideBar .menuDiv ul li ul.submenu li a{
+    color: #A3AED0;
+}
+.mainContent .dashboardLayout .sideBar .menuDiv ul li ul.submenu li a:hover{
+    color: #fff;
+}
+.submenu span i {
+    position: absolute;
+    right: 2px;
+    top: 15px;
+    font-size: 15px !important;
+}
+.arrowDown{
+    display: none;
+}
